chore(clinerules): add project rules for Next.js 15.5, Tailwind v4, shadcn, Prisma/Postgres, and Vercel

--- a/.clinerules.md
+++ b/.clinerules.md
@@ -1,24 +1,38 @@
 # Cline Rules — Mythic Story Repository (MSR)
 
-## Architectural boundaries
-- Business logic is framework-agnostic and lives in `/src/core`.
-  - **No React/Next/Prisma imports** in `/src/core/domain` or `/src/core/usecases`.
-- Routes are thin. They call usecases in `/src/core` through server handlers in `/src/features/*/server`.
-- Zod schemas live in `/src/features/<feature>/schema.ts`.
-- Single source of truth for DB schema: `/src/core/db/prisma.schema`.
+## Folder Doctrine
+- Root-based layout is authoritative:  
+  - `app/` → Next.js App Router (15.5) routes. Must be thin; only orchestrate.  
+  - `features/` → Vertical slices (components, server, schema, db).  
+  - `core/` → Business logic (domain + usecases) + adapters (db, search).  
+  - `components/` → Shared UI primitives (generic, shadcn/ui).  
+  - `lib/` → Cross-cutting helpers.  
+- No `/src` folder. If it appears, it is a mistake.  
+- **Single source of truth for DB schema:** `core/db/prisma.schema`.  
 
-## Folder expectations
-- `/src/app` → Next.js App Router routes (public/auth/app groups).
-- `/src/features` → Feature slices (components, server, schema, db).
-- `/src/components` → Shared UI primitives only.
-- `/src/lib` → Cross-cutting helpers (logger, result.ts, date utils).
-- `/ADR` → One-page notes for any new dependency or structural change.
+## Architecture Boundaries
+- `core/domain/*` and `core/usecases/*` are **framework-agnostic**.  
+  - No React, Next, or Prisma imports here.  
+- Routes in `app/` call `features/*/server/*`, which call `core/usecases/*`.  
+- Zod schemas live in `features/<slice>/schema.ts`.  
+- Prisma client and migrations live in `core/db/`.  
 
-## Coding & quality
-- TypeScript strict mode; keep `/src/core` pure + testable.
-- Tests live in `/src/tests`. Update them on non-trivial refactors.
-- Always respect consent, anonymity, licensing fields in story flows.
+## Stack Conventions
+- **Next.js 15.5**: Default to **React Server Components**. Use `"use client"` only when interaction requires it. Prefer **Server Actions** over API routes when possible.  
+- **Tailwind v4**: Use utilities and variants; avoid custom CSS unless tokens are added to Tailwind config.  
+- **shadcn/ui**: Components in `components/ui/*` are generated and must not be renamed or relocated. Project-specific UI belongs in `features/*/components`.  
+- **Prisma + Postgres**: Prisma schema in `core/db/prisma.schema`; migrations tracked with Prisma Migrate; env `DATABASE_URL` used for connection.  
+- **Vercel**: Runtime must remain `nodejs` for Prisma routes. Keep build scripts working with Vercel (`vercel-build` runs `prisma generate` + `next build`).  
 
-## If a rule blocks progress
-- Do NOT bypass boundaries silently.  
-- Instead: propose an ADR with trade-offs, then proceed.
+## Protected Paths (never move/rename without explicit human approval)
+- `core/db/*`
+- `core/domain/*`
+- `core/usecases/*`
+- `components/ui/*`
+- `features/*/server/*`
+
+## Workflow Guardrails
+- Start structural work in **Plan mode**. Show file-by-file plan, wait for human approval.  
+- Always use **Checkpoints** for changes.  
+- Major structural changes require an ADR in `/ADR`.  
+- Commits use conventional style (e.g., `chore(db): …`, `feat(stories): …`).  
